# Smriti

./: .gitignore  README.md  config.py  main.py  pyproject.toml
api/: dependencies.py  main.py
api/routers/: memory.py
core/: ingestion.py
core/embedding/: __init__.py  base.py  factory.py  local.py  openai.py
core/llm/: __init__.py  base.py  factory.py  local.py  openai.py
